# extupdate

./: README.md  extupdate.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeql.yml
